--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "dayjs": "^1.11.9",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-uuid": "^2.0.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "husky": "^8.0.3",
     "jest": "^29.2.1",
