--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
+    "moduleResolution": "node",
     "baseUrl": "./src",
     "paths": {
       "components/*": ["components/*"],
       "context/*": ["context/*"],
       "modules/*": ["modules/*"],
       "routes/*": ["routes/*"],
-      "styles/*": ["styles/*"]
-    }
+      "styles/*": ["styles/*"],
+      "utils/*": ["utils/*"]
+    },
+
+    "strict": true,
+    "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
+    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
+    "skipLibCheck": true /* Skip type checking of declaration files. */,
+    "resolveJsonModule": true /* Allows importing modules with a ‘.json’ extension, which is a common practice in node projects. */
   }
 }
