--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.13.0",
     "react-native-uuid": "^2.0.1",
     "zustand": "^4.4.1"
   },
